--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title> My Website </title>
 <link rel="stylesheet" type="text/css" href="./resources/stylesheet.css">
+<script src="./resources/scriptfile.js"></script>
 </head>
 
 
@@ -15,9 +16,9 @@
 	<p class="main"> In this website I will practice my web development skills. </p>
 	<p class="main"> Here are some buttons for quick navigation:
 
-	<div id="bu1"> <a href="index1.html" id="b1" class="b1">Page 1</a> </div>
-	<div id="bu2"><a href="index2.html" id="b2" class="b2">Page 2</a> </div>
-	<div id="bu3"><a href="index3.html" id="b3" class="b3">Page 3</a> </div>
+	<div id="bu1"><a href="index1.html" id="b1" class="b1" onmousedown="clicksound.play()">Page 1</a> </div>
+	<div id="bu2"><a href="index2.html" id="b2" class="b2" onmousedown="clicksound.play()">Page 2</a> </div>
+	<div id="bu3"><a href="index3.html" id="b3" class="b3" onmousedown="clicksound.play()">Page 3</a> </div>
 </div>
 
 </body>
