--- a/index1.html
+++ b/index1.html
@@ -3,10 +3,11 @@
 
 <head>
   <link rel="stylesheet" type="text/css" href="./resources/stylesheet1.css">
+  <script src="./resources/scriptfile.js"></script>
 </head>
 
 <body>
-  <h1 id="kot">Page 1 <a href="index.html"><img id="BackB" class="BackB" src="./resources/Images/BackB.png" alt="BackB" width="135" height="135" align="left"></h1>
+  <h1 id="kot">Page 1 <a href="index.html" onmousedown="clicksound.play()"><img id="BackB" class="BackB" src="./resources/Images/BackB.png" alt="BackB" width="135" height="135" align="left"></h1>
 </body>
 
 </html>
