--- a/index1.html
+++ b/index1.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-  <h1 id="kot">Page 1 <a href="index.html" onpointerdown="clicksound.play()"><img id="BackB" class="BackB" src="./resources/Images/BackB.png" alt="BackB" width="135" height="135" align="left"></h1>
+  <h1 id="kot">Page 1 <a href="index.html" onpointerdown="clicksound.play()"><img id="BackB" class="BackB" src="./resources/Images/BackB.png" alt="BackB" width="135" height="135" align="left"></a></h1>
+  <p id="nothing"> Nothing to see here (yet!) </p>
 </body>
 
 </html>
