--- a/Page2.html
+++ b/Page2.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <link rel="stylesheet" type="text/css" href="./resources/stylesheet2.css">
+  <link rel="stylesheet" type="text/css" href="./resources/page2style.css">
   <script src="./resources/scriptfile.js"></script>
 </head>
 
