--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 
 <body>
+<div id=container>
 <div id="header">
     <p id="kot"> Welcome to my website! </p>
 </div>
@@ -16,10 +17,12 @@
 	<p class="main"> In this website I will practice my web development skills. </p>
 	<p class="main"> Here are some buttons for quick navigation:
 
-	<div id="bu1"><a href="index1.html" id="b1" class="b1" onpointerdown="clicksound.play()">Page 1</a> </div>
-	<div id="bu2"><a href="index2.html" id="b2" class="b2" onpointerdown="clicksound.play()">Page 2</a> </div>
-	<div id="bu3"><a href="index3.html" id="b3" class="b3" onpointerdown="clicksound.play()">Page 3</a> </div>
+	<div id="bu1"><a href="Page1.html" id="b1" class="b1" onpointerdown="clicksound.play()">Page 1</a> </div>
+	<div id="bu2"><a href="Page2.html" id="b2" class="b2" onpointerdown="clicksound.play()">Page 2</a> </div>
+	<div id="bu3"><a href="Page3.html" id="b3" class="b3" onpointerdown="clicksound.play()">Page 3</a> </div>
+  </div>
+<div><a href="AboutMe.html" id="footer" onpointerdown="clicksound.play()">Who am I?</a></div>
+<img src="./resources/Images/Arrow.png" alt="Arrow" class="Arrow">
 </div>
-
 </body>
 </html>
