--- a/Page3.html
+++ b/Page3.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <link rel="stylesheet" type="text/css" href="./resources/stylesheet3.css">
+  <link rel="stylesheet" type="text/css" href="./resources/page3style.css">
   <script src="./resources/scriptfile.js"></script>
 </head>
 
