--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta property="og:image" content="./resources/Images/sun.jpg">
 <title> My Website </title>
 <link rel="stylesheet" type="text/css" href="./resources/stylesheet.css">
 <script src="./resources/scriptfile.js"></script>
