--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta property="og:image" content="./resources/Images/sun.jpg">
+<meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b4/The_Sun_by_the_Atmospheric_Imaging_Assembly_of_NASA%27s_Solar_Dynamics_Observatory_-_20100819.jpg/220px-The_Sun_by_the_Atmospheric_Imaging_Assembly_of_NASA%27s_Solar_Dynamics_Observatory_-_20100819.jpg">
 <title> My Website </title>
 <link rel="stylesheet" type="text/css" href="./resources/stylesheet.css">
 <script src="./resources/scriptfile.js"></script>
