--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b4/The_Sun_by_the_Atmospheric_Imaging_Assembly_of_NASA%27s_Solar_Dynamics_Observatory_-_20100819.jpg/220px-The_Sun_by_the_Atmospheric_Imaging_Assembly_of_NASA%27s_Solar_Dynamics_Observatory_-_20100819.jpg" xmlns:og="http://opengraphprotocol.org/schema/">
-<title> My Website </title>
+<meta name="description" content="Noam's web development skills">
+<meta property="og:description" content="Noam's web development skills">
+<title> Noam's Website </title>
 <link rel="stylesheet" type="text/css" href="./resources/stylesheet.css">
 <script src="./resources/scriptfile.js"></script>
 </head>
